2003-07-07  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/WriteGedcom.py: Fix GEDCOM export.  Fixed date
	construction logic to handle datestrs.

2003-07-06  Don Allingham  <dallingham@users.sourceforge.net>
	* gramps.sh.in: Don't override an existing PYTHONPATH environment
	variable

2003-07-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/BookReport.py: Make a list of options from a tuple.
	* src/plugins/AncestorReport.py: Register options as a tuple.
	* src/plugins/Ancestors.py: Register options as a tuple.
	* src/plugins/DescendReport.py: Register options as a tuple.
	* src/plugins/FtmStyleAncestors.py: Register options as a tuple.
	* src/plugins/FtmStyleDescendants.py: Register options as a tuple.
	* src/plugins/IndivComplete.py:  Register options as a tuple.
	* src/plugins/IndivSummary.py: Register options as a tuple.
	* src/plugins/SimpleBookTitle.py: Register options as a tuple.
	* src/plugins/FamilyGroup.py: Enable book functionality.
	Check whether family exists before accessing it.
	* src/plugins/DetAncestralReport.py: Enable book functionality.

2003-07-05  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ImageSelect.py: eliminate recursive error loop when a thumbnail
	cannot be created.
	* src/plugins/ReorderIds.py: handle IDs better when reordering
	* src/dialog.glade: witness changes

2003-07-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/BookReport.py (BookReportSelector.__init__): 
	Enable translation for interface strings,   
	* src/plugins/BookReport.py (BookReportDialog.get_stylesheet_savefile):
	Add this function to form sane filename for the output. 
	Add special treatment for Title entries (no central person displayed).
	* src/plugins/SimpleBookTitle.py: Add configurable title and copyright. 
	Change type to Title (was Text). 
	* src/plugins/IndivComplete.py: Use filter number in configurator. 
	Move get_report_filters out of dialogs classes so that it can be 